--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{font-family: 'avenir_35_lightregular', sans-serif;color: #949494;}
 a{-webkit-transition: all 0.3s;-moz-transition: all 0.3s;-o-transition: all 0.3s;-ms-transition: all 0.3s;transition: all 0.3s;}
 a:hover{text-decoration: none;}
 .btn{border-radius: 3px; font-family: 'avenir_85_heavyregular', sans-serif;color: #fff;-webkit-transition: all 0.3s;-moz-transition: all 0.3s;-o-transition: all 0.3s;-ms-transition: all 0.3s;transition: all 0.3s;}
-.btn:hover{color: #fff;}
+.btn:hover, .btn:focus{color: #fff;}
 .form-control{border-radius: 3px;color: #afafaf;font-family: 'avenir_55roman', sans-serif;}
 .form-control:focus{border-color: #80C154;-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(128, 193, 84, 0.53); box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(128, 193, 84, 0.53);}
 
