--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,8 @@ section.credit-card{font-size: 18px;padding: 30px 0;}
 #downloadModal .modal-body{padding: 60px 40px;}
 #downloadModal .modal-body p{margin-bottom: 50px;font-size: 18px;}
 
+#shift-table .demo{display: none;}
+
 
 @media screen and (max-width: 1200px){
 
