Fix responsiveness of Text Input Box on Manager>Login

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,9 @@ tr th{padding-left: 10px!important;background: #ffffff; /* Old browsers */
 /* Profile */
 #Profile .form-control{width: 340px;}
 
+/* Login */
+#Login .form-control{width: 340px;}
+
 
 
 /*
